--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,5 @@
 [workspace]
 
-members = [
-		"example-server", 
-		"load-balancer"
-]
+members = ["example-server", "load-balancer"]
 
 resolver = "2"
