--- a/load-balancer/Cargo.toml
+++ b/load-balancer/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+async-trait = "0.1.86"
 clap = { version = "4.5.27", features = ["derive"] }
 futures = "0.3.31"
 tokio = { version = "1.43.0", features = ["full"] }
